# fast-inventory

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: development_ci.yml
alembic/: env.py
alembic/versions/: 4c4b90f24170_adding_the_pricing_models_for_the_.py  8f69186186f4_add_role_status_in_workspaceuser_model.py  95f5a2ebf883_initial_migration.py  a3a04c15950b_location_fields_added_in_workspace_model.py
src/alembic/: env.py
src/alembic/versions/: 46ae36c51a95_.py  6b9cb8802969_supplieruser_model_added.py  8f69186186f4_add_role_status_in_workspaceuser_model.py  95f5a2ebf883_initial_migration.py  9b04dbfeebf0_ebayintegration_model_added.py  a3a04c15950b_location_fields_added_in_workspace_model.py  b32ca9ab543f_user_model_added.py  b9ba1eef7fa2_initial_schema_setup.py  e028ae5fef3b_ebayitem_model_added.py  ec1acef0d7f3_fix_role_status_in_workspaceuser_model.py  f186b554bce8_ebayintegrationuser_model_added.py
src/erp/: main.py  model_registry.py
src/erp/api/: router.py
src/erp/api/auth/: __init__.py  dependencies.py  exceptions.py  models.py  permissions.py  schemas.py  service.py  utils.py  views.py
src/erp/api/base/: models.py
src/erp/api/models/: supplier.py
src/erp/api/modules/items/: adapter.py  schemas.py
src/erp/api/modules/orders/: adapter.py  client.py  dependencies.py  router.py  service.py
src/erp/api/onboarding/: service.py
src/erp/api/pricing/: enums.py  models.py
src/erp/api/supplier/: models.py
src/erp/api/user/: models.py
src/erp/api/workspace/: __init__.py  enums.py  exceptions.py  models.py  schemas.py  service.py  utils.py  views.py
src/erp/api/workspace/schemas/: workspace.py  workspace_user.py
src/erp/core/: config.py  exception_handlers.py  exceptions.py
src/erp/database/: base.py
src/erp/integrations/: models.py
src/erp/integrations/ebay/base/: enum.py  models.py
src/erp/integrations/ebay/items/: __init__.py  adapter.py  client.py  dependencies.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py  views.py
src/erp/integrations/ebay/orders/: __init__.py  adapter.py  client.py  dependencies.py  repository.py  router.py  service.py  views.py
src/erp/modules/items/: adapter.py
src/erp/modules/orders/: __init__.py  adapter.py  dependencies.py  router.py  schemas.py  service.py
src/tests/: conftest.py
src/tests/api/auth/: test_dependencies.py  test_service.py
src/tests/api/modules/orders/: test_adapter.py  test_schemas.py
src/tests/api/workspace/: test_enums.py  test_service.py  test_utils.py
src/tests/core/: test_config.py  test_exception_handlers.py
src/tests/integrations/ebay/items/: test_adapter.py  test_client.py  test_dependencies.py  test_repository.py  test_service.py
