[project]
name = "erp"
version = "0.1.0"
description = "Open sourced ERP project by Theo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "N",   # naming conventions
    "UP",  # pyupgrade
    "B",   # bugbear (common bugs)
    "C4",  # comprehensions
    "SIM", # simplify
    "RET", # return rules
    "ARG", # unused arguments
    "PTH", # pathlib usage
    "RUF", # ruff specific
    "DTZ", # datetime timezone issues
    "TCH", # type checking imports
    "ANN", # type annotations
    "TRY", # exception handling
    "PERF" # performance issues
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",
    "S101"
]

[tool.ruff.lint.isort]
known-first-party = ["erp"]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
