[project]
name = "erp"
version = "0.1.0"
description = "Open sourced ERP project by Theo"
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "C. Themis Theodoratos", email = "themistheodoratos@gmail.com" }
]

license = { text = "Apache-2.0" }

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "alembic>=1.18.4",
    "bcrypt<=4.0.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
src = ["src"]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "N",   # naming conventions
    "UP",  # pyupgrade
    "B",   # bugbear (common bugs)
    "C4",  # comprehensions
    "SIM", # simplify
    "RET", # return rules
    "ARG", # unused arguments
    "PTH", # pathlib usage
    "RUF", # ruff specific
    "DTZ", # datetime timezone issues
    "TCH", # type checking imports
    "ANN", # type annotations
    "TRY", # exception handling
    "PERF" # performance issues
]
ignore = ["F821"]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = [
    "ANN",
    "S101",
    "F821"
]
"src/erp/model_registry.py" = ["I001", "RUF022"]
"src/alembic/versions/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["erp"]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
pythonpath = ["src"]
